<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="paxNo">No of Pax</string>
    <string name="discount">Discount (%)</string>
    <string name="total_bill">Total Bill - </string>
    <string name="each_pays">Each Pays - </string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="via">via</string>
</resources>
