<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/starbucks"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BillPlease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Bill Please"
        android:textColor="#090909"
        android:textSize="35dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#3B39332E"
        android:text="@string/amount"
        android:textColor="#070707"
        android:textStyle="bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editInputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#BE42352F"
        android:inputType="number"
        android:padding="0.1dp"
        android:textColor="#F8F5F5" />

    <TextView
        android:id="@+id/textNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#3B39332E"
        android:text="@string/paxNo"
        android:textColor="#0C0C0C"
        android:textStyle="bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editInputNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#BE42352F"
        android:inputType="number"
        android:padding="0.1dp"
        android:textColor="#F8F5F5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="NO SVS "
            android:textOn="SVS"
            android:typeface="monospace" />

        <ToggleButton
            android:id="@+id/tbGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="NO GST"
            android:textOn="GST"
            android:typeface="monospace" />

    </LinearLayout>

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#3B39332E"
        android:text="@string/discount"
        android:textColor="#101010"
        android:textStyle="bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editInputDisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#BE42352F"
        android:inputType="number"
        android:padding="0.1dp"
        android:textColor="#F8F5F5" />

    <RadioGroup
        android:id="@+id/rgpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/bCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textColor="#050505"
            android:textStyle="bold"
            android:typeface="monospace" />

        <RadioButton
            android:id="@+id/bPaynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow"
            android:textColor="#0E0E0E"
            android:textStyle="bold"
            android:typeface="monospace" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bSplit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:backgroundTint="#d3d3d3"
            android:text="@string/split"
            android:textColor="#000000"
            android:typeface="monospace"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/bReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:backgroundTint="#d3d3d3"
            android:text="@string/reset"
            android:textColor="#000000"
            android:typeface="monospace"
            app:cornerRadius="0dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#2A3A2D2D"
        android:text="@string/total_bill"
        android:textColor="#050505"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textEachPays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#2A3A2D2D"
        android:text="@string/each_pays"
        android:textColor="#0C0C0C"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/howPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#2A3A2D2D"
        android:text="@string/via"
        android:textColor="#0B0B0B"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>
